Update boringssl for 24.04.

--- a/docker/ubuntu-24.04/Dockerfile
+++ b/docker/ubuntu-24.04/Dockerfile
@@ -35,8 +35,8 @@ RUN mkdir build
 WORKDIR /root/webrtc-native-build/build
 RUN cmake ../ -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DCMAKE_BUILD_ARCHITECTURE=${BUILD_ARCHITECTURE}
 
-#WORKDIR /root/webrtc-native-build/3rdParty/webrtc_native/webrtc/src/third_party/boringssl/src
-#RUN git checkout 7c2b62e93487b772990fddc1905f22d4cfaee4a4
+WORKDIR /root/webrtc-native-build/3rdParty/webrtc_native/webrtc/src/third_party/boringssl/src
+RUN git checkout 7c2b62e93487b772990fddc1905f22d4cfaee4a4
 
 WORKDIR /root/webrtc-native-build/build
 RUN export PATH=/root/webrtc-native-build/3rdParty/depot_tools:$PATH && make -j2
