--- a/docker/ubuntu-22.04/Dockerfile
+++ b/docker/ubuntu-22.04/Dockerfile
@@ -28,7 +28,9 @@ RUN mkdir build
 WORKDIR /root/webrtc-native-build/build
 
 RUN cmake ../ -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DCMAKE_BUILD_ARCHITECTURE=${BUILD_ARCHITECTURE}
-RUN make -j2
+RUN ../patches/apply_patch.sh
+RUN cmake ../ -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DCMAKE_BUILD_ARCHITECTURE=${BUILD_ARCHITECTURE}
+RUN export PATH=/root/webrtc-native-build/3rdParty/depot_tools:$PATH && make -j2
 RUN make install
 
 VOLUME [ "/data" ]
