--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -55,7 +55,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
         architecture: [arm64, amd64]
         build-type: [Release, Debug]
 
@@ -138,7 +138,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-11, macos-12, macos-13]
+        os: [macos-12, macos-13]
         architecture: [osx64]
         build-type: [Release, Debug]
 
@@ -192,6 +192,7 @@ jobs:
         working-directory: build
         run: |
           cmake ../ -DCMAKE_BUILD_TYPE=${{ matrix.build-type}} -DCMAKE_BUILD_ARCHITECTURE=${{ matrix.architecture }}
+          export PATH=$PWD/../3rdParty/depot_tools:$PATH
           make -j3
           make install
 
